--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,7 +41,7 @@ android {
 
 repositories {
     jcenter { url "https://jcenter.bintray.com/",     allowInsecureProtocol = true }
-    maven {url "http://repo.spring.io/plugins-release/"}
+    maven {url "https://repo.spring.io/plugins-release/"}
     mavenCentral()
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
