--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,7 +40,7 @@ android {
 }
 
 repositories {
-    jcenter { url "https://jcenter.bintray.com/",     allowInsecureProtocol = true }
+    jcenter { url "https://jcenter.bintray.com/" }
     maven {url "https://repo.spring.io/plugins-release/"}
     mavenCentral()
     maven {
